--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../adc_driver.c \
 ../hardware.c \
+../HexLookUp.c \
 ../interrupt.c \
 ../mechanism.c \
 ../port_driver.c \
@@ -57,6 +58,7 @@ ASM_SRCS +=
 OBJS +=  \
 adc_driver.o \
 hardware.o \
+HexLookUp.o \
 interrupt.o \
 mechanism.o \
 port_driver.o \
@@ -68,6 +70,7 @@ X-Drive_Odometry.o
 OBJS_AS_ARGS +=  \
 adc_driver.o \
 hardware.o \
+HexLookUp.o \
 interrupt.o \
 mechanism.o \
 port_driver.o \
@@ -79,6 +82,7 @@ X-Drive_Odometry.o
 C_DEPS +=  \
 adc_driver.d \
 hardware.d \
+HexLookUp.d \
 interrupt.d \
 mechanism.d \
 port_driver.d \
@@ -90,6 +94,7 @@ X-Drive_Odometry.d
 C_DEPS_AS_ARGS +=  \
 adc_driver.d \
 hardware.d \
+HexLookUp.d \
 interrupt.d \
 mechanism.d \
 port_driver.d \
@@ -109,6 +114,8 @@ OUTPUT_FILE_DEP:= ./makedep.mk
 LIB_DEP+= 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
